syntax = "proto3";

package com.frausto.proto;

option java_multiple_files = true;
option java_package = "com.frausto.proto";
option java_outer_classname = "DockerServiceProtos";

message DockerContainerStatus {
  int64 config_id = 1;
  string config_name = 2;
  string container_id = 3;
  string container_name = 4;
  string status = 5;
  bool running = 6;
  bool expected_running = 7;
  bool pid1_running = 8;
  bool attention_needed = 9;
}

message DockerStatusEvent {
  repeated DockerContainerStatus statuses = 1;
  int64 generated_at_epoch_ms = 2;
}
